# refactoring

./: CMakeLists.txt  dependencies.txt  example.cpp  main.cpp
